--- a/lm_harness_tasks/csi_custom_task.yaml
+++ b/lm_harness_tasks/csi_custom_task.yaml
@@ -10,7 +10,7 @@ dataset_path: json
 dataset_kwargs:
   # We explicitly map our file to the "test" split, which the evaluator looks for.
   data_files:
-    test: "csi_benchmark_local.jsonl"
+    test: "data/msi_benchmark_medium_resource.jsonl"
 
 test_split: "test"
 
